# Historical-ciphers-app

./: CMakeLists.txt  README.md  readme.txt
Hill_cipher/: CMakeLists.txt  Hill_encoder.cpp  Hill_encoder.hpp  Matrix_class.cpp  main.cpp
affine-ciphers/: Affine_ciphers.cpp  Affine_ciphers.hpp  Affine_ciphers_tests.cpp  CMakeLists.txt  main.cpp
affine_ciphers/: Affine_ciphers.cpp  Affine_ciphers.hpp  Affine_ciphers_tests.cpp  CMakeLists.txt
ciphers/: Affine_ciphers.cpp  Affine_ciphers.hpp  Affine_ciphers_tests.cpp  CMakeLists.txt  Doxyfile  main.cpp  vigenere_ciphers.cpp  vigenere_ciphers.hpp
docs/html/: _affine__ciphers_8cpp.html  _affine__ciphers_8hpp.html  _affine__ciphers_8hpp_source.html  _affine__ciphers__tests_8cpp.html  _frontend__test_8cpp.html  _functions_8cpp.html  _hill__encoder_8cpp.html  _hill__encoder_8hpp.html  _hill__encoder_8hpp_source.html  _historical__ciphers__app_8cpp.html  annotated.html  class_magma-members.html  class_magma.html  class_main_window-members.html  class_main_window.html  class_matrix__class-members.html  class_matrix__class.html  classes.html  dir_1c5d4f854d33d2d94e7c45be89004ba4.html  dir_4afc98d6ef7d12960528a4f1b529d7a8.html  dir_747db3f0643bdd2a04a987f13f470f6b.html  dir_791327bf47c8cf5c0c5b4ffac5a393cd.html  dir_ca0386ec887ae6362f93b0d653b52e0c.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  magma__cipher_8cpp.html  magma__cipher_8hpp.html  magma__cipher_8hpp_source.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  vigenere__ciphers_8cpp.html  vigenere__ciphers_8hpp.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: _affine__ciphers_8cpp.tex  _affine__ciphers_8hpp.tex  _affine__ciphers_8hpp_source.tex  _affine__ciphers__tests_8cpp.tex  _frontend__test_8cpp.tex  _functions_8cpp.tex  _hill__encoder_8cpp.tex  _hill__encoder_8hpp.tex  _hill__encoder_8hpp_source.tex  _historical__ciphers__app_8cpp.tex  annotated.tex  class_magma.tex  class_main_window.eps  class_main_window.tex  class_matrix__class.tex  files.tex  hierarchy.tex  magma__cipher_8cpp.tex  magma__cipher_8hpp.tex  magma__cipher_8hpp_source.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex  vigenere__ciphers_8cpp.tex  vigenere__ciphers_8hpp.tex  vigenere__ciphers_8hpp_source.tex
frontend/: 1.txt  CMakeLists.txt  Frontend_test.cpp  Functions.cpp  Historical_ciphers_app.cpp  mainwindow.h
frontend/html/: _functions_8cpp.html  _historical__ciphers__app_8cpp.html  annotated.html  class_main_window-members.html  class_main_window.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  mainwindow_8h.html  mainwindow_8h_source.html
frontend/html/search/: all_1.js  all_2.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
frontend/latex/: _functions_8cpp.tex  _historical__ciphers__app_8cpp.tex  annotated.tex  class_main_window.tex  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex
hill_cipher/: CMakeLists.txt  Hill_encoder.cpp  Hill_encoder.hpp  Hill_encoder_tests.cpp
magma_cipher/: CMakeLists.txt  magma_cipher.cpp  magma_cipher.hpp  magma_tests.cpp  main.cpp
vigenere_ciphers/: CMakeLists.txt  vigenere_ciphers.cpp  vigenere_ciphers.hpp  vigenere_ciphers_tests.cpp
